<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="viewmodel"
            type="com.alexey_freelancee.delivery.ui.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.login.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_splash"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:text="@={viewmodel.email}"
                    android:inputType="textEmailAddress"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/pass"
                android:layout_marginTop="8dp"


                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:text="@={viewmodel.pass}"

                    android:inputType="textPassword"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:onClick="@{viewmodel::doLogin}"
                android:layout_height="wrap_content"
                android:background="@color/darkGreen"
                android:textColor="@color/white"
                android:text="@string/log_in"/>
        </LinearLayout>

        <TextView
            android:background="?selectableItemBackground"
            android:layout_width="wrap_content"
            android:onClick="@{viewmodel::doRegistration}"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="70dp"
            android:text="Регистрация"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
